# SU3_lossy_1D_lattice

./: CMakeLists.txt  README.md  main.cpp
modules/: basis.cpp  basis.h  effective_hamiltonian.cpp  effective_hamiltonian.h  quantum_trajectory.cpp  quantum_trajectory.h  tensored_basis.cpp  tensored_basis.h
output/J=1_U2=0_U3=0_g=0.01/L=3_NA=1_NB=1_NC=1/: dt=0.1_NT=4000_pbc
output/J=1_U2=0_U3=0_g=0.01/L=3_NA=3_NB=2_NC=2/: dt=0.1_NT=4000_pbc
output/J=1_U2=0_U3=0_g=0.01/L=6_NA=2_NB=2_NC=2/: dt=0.1_NT=4000_pbc
output/J=1_U2=0_U3=0_g=0.05/L=6_NA=2_NB=2_NC=2/: dt=0.1_NT=4000_pbc
output/J=1_U2=0_U3=0_g=0.1/L=3_NA=3_NB=2_NC=2/: dt=0.1_NT=4000_pbc
output/J=1_U2=0_U3=0_g=1/L=6_NA=2_NB=2_NC=2/: dt=0.1_NT=8000_pbc
